--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "RoadWander is a web app designed to help users discover and plan memorable road trips worldwide.",
   "main": "index.js",
   "scripts": {
+    "devStart":"nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3"
   },
   "devDependencies": {
